# eg-seven-segment

./: Cargo.toml  README.md  README.tpl  justfile
.github/workflows/: rust.yml
assets/: styles.png_base64
examples/: custom_digits.rs  digit.rs  digital-clock.rs  styles.rs
src/: digit.rs  lib.rs  segment.rs  segments.rs  seven_segment_style.rs  seven_segment_style_builder.rs  seven_segment_text_style.rs  seven_segment_text_style_builder.rs
