[package]
name = "eg-seven-segment"
version = "0.1.0"
authors = ["Ralf Fuest <mail@rfuest.de>"]
edition = "2018"
repository = "https://github.com/embedded-graphics/eg-seven-segment"
documentation = "https://docs.rs/embedded-graphics"
categories = ["embedded", "no-std"]
keywords = ["embedded-graphics", "font"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
embedded-graphics = "0.7.0-beta.1"
bitflags = "1.2.1"

[dev-dependencies]
chrono = "0.4.19"
embedded-graphics-simulator = "0.3.0-beta.1"
