[package]
name = "eg-seven-segment"
version = "0.1.0"
authors = ["Ralf Fuest <mail@rfuest.de>"]
edition = "2021"
description = "Seven-segment displays for embedded-graphics"
repository = "https://github.com/embedded-graphics/eg-seven-segment"
categories = ["embedded", "no-std"]
keywords = ["embedded-graphics", "graphics", "font", "text"]
license = "MIT OR Apache-2.0"

[dependencies]
embedded-graphics = "0.7.1"
bitflags = "1.3.2"

[dev-dependencies]
chrono = "0.4.19"
embedded-graphics-simulator = "0.3.0"
