[package]
name = "eg-seven-segment"
version = "0.1.0"
authors = ["Ralf Fuest <mail@rfuest.de>"]
edition = "2021"
description = "Seven-segment displays for embedded-graphics"
repository = "https://github.com/embedded-graphics/eg-seven-segment"
categories = ["embedded", "no-std"]
keywords = ["embedded-graphics", "graphics", "font", "text"]
license = "MIT OR Apache-2.0"
exclude = [
    "/.github",
    "/README.tpl",
    "/justfile",
]

[dependencies]
embedded-graphics = "0.8.1"
bitflags = "2.4.0"

[dev-dependencies]
chrono = "0.4.31"
embedded-graphics-simulator = "0.5.0"
